--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,14 @@ requires-python = ">=3.12"
 dependencies = [
     "chromadb>=1.3.4",
     "faiss-cpu>=1.12.0",
+    "groq>=0.33.0",
     "ipykernel>=7.1.0",
     "langchain>=1.0.5",
     "langchain-community>=0.4.1",
     "langchain-core>=1.0.4",
+    "langchain-groq>=1.0.0",
     "pymupdf>=1.26.6",
     "pypdf>=6.1.3",
+    "python-dotenv>=1.2.1",
     "sentence-transformers>=5.1.2",
 ]
